@@ -1,34 +1,0 @@
-/**
- * Copyright © 2002 Instituto Superior Técnico
- *
- * This file is part of FenixEdu Academic.
- *
- * FenixEdu Academic is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * FenixEdu Academic is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with FenixEdu Academic.  If not, see <http://www.gnu.org/licenses/>.
- */
-package org.fenixedu.academic.service.services.commons;
-
-import pt.ist.fenixframework.Atomic;
-
-public class ExecuteFactoryMethod {
-
-    @Atomic
-    public static Object run(FactoryExecutor factoryExecutor) {
-        if (factoryExecutor != null) {
-            return factoryExecutor.execute();
-        } else {
-            return null;
-        }
-    }
-
-}
