@@ -1,7 +1,0 @@
-{
-  "resources": {
-    "bundles": [ ],
-    "defaultBundle": "ApplicationResources"
-  },
-  "modules": [ ]
-}
